--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,48 +1,38 @@
 .header {
   width: 100%;
   height: 5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #3c0080;
-  color: white;
+  background-color: #044599;
   padding: 0 10%;
 }
 
+.header nav {
+  height: 100%;
+}
+
 .header ul {
-  display: flex;
+  height: 100%;
   list-style: none;
-  margin: 0;
+  display: flex;
   padding: 0;
+  margin: 0;
   align-items: center;
+  justify-content: center;
 }
 
 .header li {
   margin: 0 1rem;
+  width: 5rem;
 }
 
 .header a {
-  text-decoration: none;
   color: white;
-  font-size: 1.25rem;
+  text-decoration: none;
 }
 
 .header a:hover,
-.header a:active {
-  color: #b864da;
-}
-
-.header button {
-  font-size: 1.25rem;
-  background-color: #ffbb00;
-  border: 1px solid #ffbb00;
-  padding: 0.5rem 1.5rem;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  color: #2c2922;
-}
-
-.header button:hover,
-.header button:active {
-  background-color: #ffa600;
-  border-color: #ffa600;
+.header a:active,
+.header a.active {
+  color: #95bcf0;
+  padding-bottom: 0.25rem;
+  border-bottom: 4px solid #95bcf0;
 }
