--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,26 @@
+
 * {
   box-sizing: border-box;
 }
 
+html {
+  font-family: 'Noto Sans JP', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: sans-serif;
-  color: #252525;
-  background-color: #252525;
+  background-color: #e0e9f5;
 }
 
-button {
-  font: inherit;
-  cursor: pointer;
-  background-color: #3c0080;
-  border: 1px solid #3c0080;
+main {
+  margin-top: 7rem;
+  text-align: center;
+}
+
+h1 {
   color: white;
-  padding: 0.5rem 1.5rem;
-  border-radius: 6px;
 }
 
-button:hover,
-button:active {
-  background-color: #5b14ac;
-  border-color: #5b14ac;
+h3 {
+  color: #044599;
 }
